--- a/ColorController/PopupPages/EnterDeviceNamePopupPage.xaml
+++ b/ColorController/PopupPages/EnterDeviceNamePopupPage.xaml
@@ -10,27 +10,15 @@
     <yummy:PancakeView HorizontalOptions="FillAndExpand"                                     
                        VerticalOptions="CenterAndExpand"                                  
                        BackgroundColor="#994DDDFF"                            
-                       Padding="3"      >
+                       Padding="3"  
+                       Margin="{OnIdiom Phone='30,0', Tablet='80,0'}">
         <yummy:PancakeView.Border>
             <yummy:Border Color="#804DDDFF" Thickness="2"/>
         </yummy:PancakeView.Border>
         <yummy:PancakeView.Shadow>
             <yummy:DropShadow Color="#000000" Offset="10,10"/>
         </yummy:PancakeView.Shadow>
-        <yummy:PancakeView.Margin>
-            <OnIdiom x:TypeArguments="Thickness">
-                <OnIdiom.Phone>
-                    <OnPlatform x:TypeArguments="Thickness"
-                                iOS="30,0" 
-                                Android="30,0" />
-                </OnIdiom.Phone>
-                <OnIdiom.Tablet>
-                    <OnPlatform x:TypeArguments="Thickness"
-                                iOS="80,0"
-                                Android="80,0" />
-                </OnIdiom.Tablet>
-            </OnIdiom>
-        </yummy:PancakeView.Margin>
+
         <yummy:PancakeView  HorizontalOptions="FillAndExpand"  
                             VerticalOptions="Center"
                             BackgroundColor="#FF1E1D22" >
@@ -48,36 +36,9 @@
                 <yummy:DropShadow Color="#FF1E1D22" Offset="5,5"/>
             </yummy:PancakeView.Shadow>
             <Grid VerticalOptions="Center"
+                  RowSpacing="{OnIdiom Phone=15, Tablet=30}" 
+                  Padding="{OnIdiom Phone=20, Tablet=40}" 
                   RowDefinitions="Auto,Auto,Auto,Auto">
-                <Grid.RowSpacing>
-                    <OnIdiom x:TypeArguments="x:Double">
-                        <OnIdiom.Phone>
-                            <OnPlatform x:TypeArguments="x:Double"
-                                            iOS="15" 
-                                            Android="15" />
-                        </OnIdiom.Phone>
-                        <OnIdiom.Tablet>
-                            <OnPlatform x:TypeArguments="x:Double" 
-                                            iOS="30"
-                                            Android="30" />
-                        </OnIdiom.Tablet>
-                    </OnIdiom>
-                </Grid.RowSpacing>
-                <Grid.Padding>
-                    <OnIdiom x:TypeArguments="Thickness">
-                        <OnIdiom.Phone>
-                            <OnPlatform x:TypeArguments="Thickness"
-                                iOS="20" 
-                                Android="20" />
-                        </OnIdiom.Phone>
-                        <OnIdiom.Tablet>
-                            <OnPlatform x:TypeArguments="Thickness"
-                                iOS="40"
-                                Android="40" />
-                        </OnIdiom.Tablet>
-                    </OnIdiom>
-                </Grid.Padding>
-
                 <StackLayout Grid.Row="0" VerticalOptions="Center" 
                              Spacing="15">
                     <Label Text="Connected!" 
@@ -89,57 +50,20 @@
                            Style="{DynamicResource Label14Style}" />
                 </StackLayout>
 
-                <yummy:PancakeView Grid.Row="1" VerticalOptions="Center"  BackgroundColor="#FF100F14"   CornerRadius="5" HorizontalOptions="FillAndExpand">
+
+                <yummy:PancakeView Grid.Row="1"
+                                   CornerRadius="{OnIdiom Phone=5, Tablet=8}"
+                                   HeightRequest="{OnIdiom Phone={OnPlatform Android=42, iOS=34}, Tablet=60}"
+                                   VerticalOptions="Center"  BackgroundColor="#FF100F14" HorizontalOptions="FillAndExpand">
                     <yummy:PancakeView.Border>
                         <yummy:Border Thickness="1" Color="#FF2B292E"/>
                     </yummy:PancakeView.Border>
-                    <yummy:PancakeView.CornerRadius>
-                        <OnIdiom x:TypeArguments="CornerRadius">
-                            <OnIdiom.Phone>
-                                <OnPlatform x:TypeArguments="CornerRadius"
-                                            iOS="5" 
-                                            Android="5" />
-                            </OnIdiom.Phone>
-                            <OnIdiom.Tablet>
-                                <OnPlatform x:TypeArguments="CornerRadius"
-                                            iOS="8"
-                                            Android="8" />
-                            </OnIdiom.Tablet>
-                        </OnIdiom>
-                    </yummy:PancakeView.CornerRadius>
-                    <yummy:PancakeView  BackgroundColor="#FF121116" HorizontalOptions="FillAndExpand" VerticalOptions="Center">
+                    <yummy:PancakeView   CornerRadius="{OnIdiom Phone=5, Tablet=8}" BackgroundColor="#FF121116" HorizontalOptions="FillAndExpand" VerticalOptions="Center">
                         <yummy:PancakeView.Border>
                             <yummy:Border Thickness="5" Color="#800D0C11"/>
                         </yummy:PancakeView.Border>
-                        <yummy:PancakeView.CornerRadius>
-                            <OnIdiom x:TypeArguments="CornerRadius">
-                                <OnIdiom.Phone>
-                                    <OnPlatform x:TypeArguments="CornerRadius"
-                                            iOS="5" 
-                                            Android="5" />
-                                </OnIdiom.Phone>
-                                <OnIdiom.Tablet>
-                                    <OnPlatform x:TypeArguments="CornerRadius"
-                                            iOS="8"
-                                            Android="8" />
-                                </OnIdiom.Tablet>
-                            </OnIdiom>
-                        </yummy:PancakeView.CornerRadius>
-                        <yummy:PancakeView.HeightRequest>
-                            <OnIdiom x:TypeArguments="x:Double">
-                                <OnIdiom.Phone>
-                                    <OnPlatform x:TypeArguments="x:Double"
-                                            iOS="34" 
-                                            Android="42" />
-                                </OnIdiom.Phone>
-                                <OnIdiom.Tablet>
-                                    <OnPlatform x:TypeArguments="x:Double" 
-                                            iOS="60"
-                                            Android="60" />
-                                </OnIdiom.Tablet>
-                            </OnIdiom>
-                        </yummy:PancakeView.HeightRequest>
                         <Entry BackgroundColor="Transparent" 
+                               FontSize="{OnIdiom Phone=18, Tablet=27}"
                                Text="{Binding DeviceName, Mode=TwoWay}"
                                HorizontalTextAlignment="Center" 
                                FontFamily="LatoBold" 
@@ -147,26 +71,12 @@
                                TextColor="{DynamicResource DefaultTextColor}"
                                VerticalOptions="Center"
                                HorizontalOptions="FillAndExpand">
-                            <Entry.FontSize>
-                                <OnIdiom x:TypeArguments="x:Double">
-                                    <OnIdiom.Phone>
-                                        <OnPlatform x:TypeArguments="x:Double"
-                                            iOS="18" 
-                                            Android="18" />
-                                    </OnIdiom.Phone>
-                                    <OnIdiom.Tablet>
-                                        <OnPlatform x:TypeArguments="x:Double" 
-                                            iOS="27"
-                                            Android="27" />
-                                    </OnIdiom.Tablet>
-                                </OnIdiom>
-                            </Entry.FontSize>
                         </Entry>
 
                     </yummy:PancakeView>
                 </yummy:PancakeView>
 
-                <Grid VerticalOptions="Center" Grid.Row="2"
+                <!--<Grid VerticalOptions="Center" Grid.Row="2"
                       ColumnDefinitions="Auto,*"
                       ColumnSpacing="20">
                     <controls:CustomCheckBoxControl x:Name="checkBox" CheckBoxStatus="{Binding IsDefault, Mode=TwoWay}" VerticalOptions="Center"/>
@@ -180,27 +90,16 @@
                                    Style="{DynamicResource Label10Style}"  
                                    FontFamily="LatoItalic"/>
                     </StackLayout>
-                </Grid>
+                </Grid>-->
 
                 <!--<Label Text="{Binding Source={x:Reference checkBox}, Path=CheckBoxStatus}"/>-->
 
-                <ImageButton Source="okOnBtn.png" Clicked="OkTapped" Margin="0,5" Grid.Row="3" VerticalOptions="Center">
-                    <ImageButton.HeightRequest>
-                        <OnIdiom x:TypeArguments="x:Double">
-                            <OnIdiom.Phone>
-                                <OnPlatform x:TypeArguments="x:Double"
-                                            iOS="30" 
-                                            Android="30" />
-                            </OnIdiom.Phone>
-                            <OnIdiom.Tablet>
-                                <OnPlatform x:TypeArguments="x:Double" 
-                                            iOS="55"
-                                            Android="55" />
-                            </OnIdiom.Tablet>
-                        </OnIdiom>
-                    </ImageButton.HeightRequest>
-                </ImageButton>
-
+                <ImageButton Source="okOnBtn.png" 
+                             HeightRequest="{OnIdiom Phone=30, Tablet=55}" 
+                             Clicked="OkTapped" 
+                             Margin="0,5"
+                             Grid.Row="3"
+                             VerticalOptions="Center"/>
             </Grid>
         </yummy:PancakeView>
 
